--- a/about/assets/main.css
+++ b/about/assets/main.css
@@ -154,22 +154,7 @@ a:hover { text-decoration: none; }
     }
     
     .index {
-        font-family: 'Noto Sans SC';
-        font-style: normal;
-        font-weight: 700;
-        font-size: 24px;
-        line-height: 36px;
-        text-transform: uppercase;
-        border: 2.5px solid #871E1E;
-        border-radius: 50px;
-        color: #871E1E;
-        width: 85px;
-        position: fixed;
-        right: 20px;
-        top: 25px;
-        padding-left: 12px;
-        padding-bottom: 3px;
-        cursor: pointer;
+        display: none;
     }
     
     .language {
